# py-q-craft

./: .gitignore  LICENSE.md  README.md  great-docs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
qcraft/: __init__.py  _api_helpers.py  _readers.py  api.py  groups.json  runtime.py
tests/: README.md
tests/differential/: differential_test_exported_library.py  differential_types.py
tests/results/reference/: parity_report.csv  parity_report.txt
user_guide/: 01-functional-overview.qmd  02-illustrative-example.qmd  03-excel-parity-validation.qmd  index.qmd
